// https://dbdiagram.io/

Table "nets" {
  "net_id" bigint [primary key, not null]
  "net_level" integer [not null, default: 0]
  "parent_net_id" bigint [default: NULL]
  "root_net_id" bigint [default: NULL]
  "count_of_nets" integer [not null, default: 1]
}

Table "nets_data" {
  "net_id" bigint [primary key, not null]
  "name" "character varying(50)" [not null]
  "goal" text [default: NULL]
  "net_link" "character varying(255)" [default: NULL]
  "resource_name" "character varying(50)" [default: NULL]
}

Table "nets_guests" {
  "net_id" bigint [not null]
  "user_id" bigint [not NULL]
  "comment" text [default: NULL]
  Indexes {
    (net_id, user_id) [pk]
    net_id [name: "sk_nets_guests_net"]
    user_id [name: "sk_nets_guests_user"]
  }
}

Table "nodes" {
  "node_id" bigint [primary key, not null]
  "node_level" integer [not null, default: 0]
  "parent_node_id" bigint [default: NULL]
  "net_id" bigint [not null]
  "node_position" integer [not null, default: 0]
  "count_of_members" integer [not null, default: 0]
  "updated" timestamp [not null, default: 'now()']
  Indexes {
    parent_node_id [name: "sk_nodes_parent_node"]
  }
}

Table "users" {
  "user_id" integer [primary key, not null]
  "email" "character varying(50)" [default: NULL]
  "name" "character varying(50)" [default: NULL]
  "mobile" "character varying(50)" [default: NULL]
  "password" "character varying(255)" [default: NULL]
  "confirmed" boolean [not null, default: false]
  "chat_id" "character varying(50)" [default: NULL]
  Indexes {
    email [type: btree, unique, name: "users_email_idx"]
    chat_id [type: btree, unique, name: "users_chat_idx"]
  }
}

Table "members" {
  "member_id" bigint [primary key, not null]
  "user_id" bigint [default: NULL]
  "email_show" boolean [not null, default: false]
  "name_show" boolean [not null, default: false]
  "mobile_show" boolean [not null, default: false]
  "confirmed" boolean [not null, default: false]
  "active_date" timestamp [not null, default: 'now()']
  Indexes {
    user_id [name: "sk_members_user"]
    // active_date
  }
}

Table "users_tokens" {
  "user_id" integer [primary key, not null]
  "token" "character varying(255)" [not null]
  Indexes {
    token [type: btree, unique, name: "uk_users_tokens_token_idx"]
  }
}

Table "members_invites" {
  "member_id" bigint [not null]
  "node_id" bigint [primary key, not null]
  "member_name" "character varying(50)" [not null]
  "token" "character varying(255)" [not null]
  Indexes {
    token [type: btree, unique, name: "uk_members_invites_token_idx"]
    // node_id
  }
}

Table "members_to_members" {
  "branch_id" bigint [not null]
  "from_member_id" bigint [not null]
  "to_member_id" bigint [not null]
  "dislike" boolean [not null, default: false]
  "vote" boolean [not null, default: false]
  "replacing" boolean [not null, default: false]
  Indexes {
    (from_member_id, to_member_id, replacing) [pk]
    branch_id [name: "sk_members_to_members_branch"]
  }
}

Table "sessions" {
  "session_id" integer [primary key, not null]
  "user_id" integer [not null]
  "session_key" "character varying(255)" [not null]
  "session_value" "character varying(255)" [not null]
  "updated" timestamp [not null, default: 'now()']
  // Indexes {
  //   session_key
  // }
}

Table roles {
  "role_id" integer [primary key, not null]
  "name" "character varying" [not null]
}

Table users_roles {
  "user_id" integer [not null]
  "role_id" integer [not null]
  Indexes {
    (user_id, role_id) [pk, name: "pk_users_roles"]
  }
}

Table messages {
  "message_id" integer [primary key, not null]
  "subject" "character varying" [not null]
  "content" "character varying" [not null]
  "date" timestamp [not null]
}

Table "subscriptions" {
  "user_id" integer [primary key, not null]
  "type" "character varying" [not null]
  "date" timestamp [not null, default: 'now()']
  "subject" "character varying" [not null]
  "message_date" timestamp [not null, default: 'now()']
  Indexes {
    (user_id, subject) [pk, name: "pk_subscriptions"]
  }
}

Table "events" {
  "event_id" bigint [primary key, not null]
  "from_node_id" bigint [default: NULL]
  "user_id" bigint [not null]
  "net_id" bigint [default: NULL]
  "net_view" "character(10)" [default: NULL]
  "event_type" "character(20)" [not null]
  "message" "character varying(255)" [not null]
  "date" timestamp [not null, default: 'now()']
  Indexes {
    user_id [name: "sk_events_user"]
    // date ?
    // net_id ?
    // net_view ?
  }
}

Table "users_events" {
  "user_id" bigint [primary key, not null]
  "notification_date" timestamp [not null, default: 'now()']
}

Ref "fk_users_tokens_user":"users"."user_id" < "users_tokens"."user_id" [delete: cascade]
Ref "fk_sessions_user":"users"."user_id" < "sessions"."user_id" [delete: cascade]
Ref "fk_users_roles_user":"users"."user_id" < "users_roles"."user_id" [delete: cascade]
Ref "fk_users_roles_role":"roles"."role_id" < "users_roles"."role_id" [delete: cascade]
Ref "fk_subscriptions_user":"users"."user_id" < "subscriptions"."user_id" [delete: cascade]
//
Ref "fk_nodes_net":"nets"."net_id" < "nodes"."net_id"
Ref "fk_nets_data_net":"nets"."net_id" - "nets_data"."net_id" [delete: cascade]
Ref "fk_nets_guests_net":"nets"."net_id" - "nets_guests"."net_id" [delete: cascade]
Ref "fk_nets_guests_user":"users"."user_id" - "nets_guests"."user_id" [delete: cascade]
Ref "fk_members_node":"nodes"."node_id" - "members"."member_id"
Ref "fk_members_user":"users"."user_id" < "members"."user_id" [delete: cascade] // ON DELETE ?
Ref "fk_members_invites_member":"members"."member_id" < "members_invites"."member_id" [delete: cascade]
Ref "fk_members_invites_node":"nodes"."node_id" - "members_invites"."node_id"
Ref "fk_members_to_members_branch_node":"nodes"."node_id" < "members_to_members"."branch_id"
Ref "fk_members_to_members_from_member":"members"."member_id" < "members_to_members"."from_member_id" [delete: cascade]
Ref "fk_members_to_members_to_member":"members"."member_id" < "members_to_members"."to_member_id" [delete: cascade]
//
Ref "fk_events_user": "users"."user_id" < "events"."user_id" [delete: cascade]
Ref "fk_events_net": "nets"."net_id" < "events"."net_id"
Ref "fk_events_from_node": "nodes"."node_id" < "events"."from_node_id" [delete: cascade] // ON DELETE ?
Ref "fk_users_events_user": "users"."user_id" - "users_events"."user_id" [delete: cascade]
